--- a/index.html
+++ b/index.html
@@ -485,6 +485,18 @@
       .week-list{ font-size: 13px; }
     }
 
+  
+    footer a{
+      color: rgba(43,42,42,.70);
+      text-decoration: none;
+      border-bottom: 1px solid rgba(43,42,42,.25);
+      padding-bottom: 2px;
+    }
+    footer a:hover{
+      color: rgba(43,42,42,.92);
+      border-bottom-color: rgba(43,42,42,.55);
+    }
+
   </style>
 </head>
 
@@ -653,7 +665,9 @@
             </div>
           </div>
 
-          <footer>© <span id="year"></span> SageSpencer.com</footer>
+          <footer>© <span id="year"></span> SageSpencer.com ·
+          <a href="privacy.html">Privacy Policy</a> ·
+          <a href="terms.html">Terms &amp; Conditions</a></footer>
         </div>
       </div>
     </div>
