--- a/confirmed.html
+++ b/confirmed.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Almost there — confirm your email</title>
-  <meta name="description" content="Check your inbox to confirm your subscription to the Sage Spencer 21-Day Email Journey." />
+  <title>You're in — welcome</title>
+  <meta name="description" content="You’re confirmed. Welcome to the Sage Spencer 21-Day Email Journey." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -259,32 +259,32 @@
 
     <div class="card">
       <div class="content">
-        <h1>You're almost in.</h1>
+        <h1>You're in. Welcome.</h1>
         <p class="sub">
-          Because this is <strong>double opt‑in</strong>, there’s one quick step left.
-          Confirming protects your inbox and keeps the journey <strong>100% clean</strong>.
+          Your email is confirmed — and the <strong>21‑Day Email Journey</strong> starts now.
+          Day 1 is on the way (check your inbox in the next few minutes).
         </p>
 
-        <div class="steps" aria-label="Confirmation steps">
-          <h2>Do this now</h2>
+        <div class="steps" aria-label="Next steps">
+          <h2>Next steps</h2>
           <ul class="list">
             <li class="item">
               <div class="badge">1</div>
               <div class="txt">
-                Check your inbox for an email from <strong>hello@sagespencer.com</strong>.
+                Look for <strong>Day 1</strong> from <strong>hello@sagespencer.com</strong>.
               </div>
             </li>
             <li class="item">
               <div class="badge">2</div>
               <div class="txt">
-                Open it and click <strong>Confirm my subscription</strong>.
+                Move it to your Primary inbox (or mark as “Not spam”) so you don’t miss a day.
               </div>
             </li>
             <li class="item">
               <div class="badge">3</div>
               <div class="txt">
-                If you don’t see it in 2–5 minutes, check <strong>Spam/Promotions</strong> and search:
-                <strong>Sage Spencer</strong>.
+                When you’re ready, reply to Day 1 with one line:
+                <strong>“This is what I’m choosing today.”</strong>
               </div>
             </li>
           </ul>
@@ -292,10 +292,10 @@
 
         <div class="actions">
           <a class="btn" href="index.html">Back to Home</a>
-          <a class="btn secondary" href="mailto:hello@sagespencer.com?subject=I%20didn%E2%80%99t%20receive%20the%20confirmation%20email&body=Hi%20Sage%20Spencer%2C%0A%0AI%20signed%20up%20but%20didn%E2%80%99t%20receive%20the%20double%20opt-in%20confirmation%20email.%20Please%20help.%0A%0AThanks!">Email Support</a>
+          <a class="btn secondary" href="mailto:hello@sagespencer.com?subject=I%20confirmed%20%E2%80%94%20Day%201%20not%20received&body=Hi%20Sage%20Spencer%2C%0A%0AI%20confirmed%20my%20subscription%20but%20I%20haven%E2%80%99t%20received%20Day%201%20yet.%20Please%20help.%0A%0AThanks!">Need help?</a>
         </div>
 
-        <div class="tiny">Once you confirm, we’ll redirect you to your welcome page.</div>
+        <div class="tiny">Keep it calm. Keep it consistent. One day at a time.</div>
 
         <footer>
           © <span id="year"></span> SageSpencer.com ·
